Added silver blocks

--- a/src/main/resources/assets/silveroremod/lang/en_us.json
+++ b/src/main/resources/assets/silveroremod/lang/en_us.json
@@ -1,5 +1,10 @@
 {
   "item.silveroremod.raw_silver": "Raw Silver",
   "item.silveroremod.silver_ingot": "Silver Ingot",
-  "item.silveroremod.silver_nugget": "Silver Nugget"
+  "item.silveroremod.silver_nugget": "Silver Nugget",
+
+  "block.silveroremod.silver_ore": "Silver Ore",
+  "block.silveroremod.silver_block": "Block of Silver",
+  "block.silveroremod.deepslate_silver_ore": "Deepslate Silver Ore",
+  "block.silveroremod.raw_silver_block": "Block of Raw Silver"
 }
