--- a/src/main/resources/assets/silveroremod/lang/en_us.json
+++ b/src/main/resources/assets/silveroremod/lang/en_us.json
@@ -8,5 +8,8 @@
   "block.silveroremod.deepslate_silver_ore": "Deepslate Silver Ore",
   "block.silveroremod.raw_silver_block": "Block of Raw Silver",
 
-  "creativetab.silveroremod.silver_ore_items_tab": "Silver Ore"
+  "creativetab.silveroremod.silver_ore_items_tab": "Silver Ore",
+
+  "tooltip.silveroremod.deals_minor_damage_to_undead": "§7Deals minor damage to undead that step on it.",
+  "tooltip.silveroremod.deals_damage_to_undead": "§7Deals damage to undead that step on it."
 }
