--- a/src/main/resources/assets/silveroremod/lang/en_us.json
+++ b/src/main/resources/assets/silveroremod/lang/en_us.json
@@ -10,12 +10,14 @@
   "item.silveroremod.silver_sword": "Silver Sword",
 
   "block.silveroremod.silver_ore": "Silver Ore",
-  "block.silveroremod.silver_block": "Block of Silver",
   "block.silveroremod.deepslate_silver_ore": "Deepslate Silver Ore",
   "block.silveroremod.raw_silver_block": "Block of Raw Silver",
 
+  "block.silveroremod.silver_block": "Block of Silver",
+  "block.silveroremod.silver_door": "Silver Door",
+  "block.silveroremod.silver_trap_door": "Silver Trap Door",
+
   "creativetab.silveroremod.silver_ore_items_tab": "Silver Ore",
 
-  "tooltip.silveroremod.deals_minor_damage_to_undead": "§7Deals minor damage to undead",
-  "tooltip.silveroremod.deals_damage_to_undead": "§7Deals damage to undead"
+  "tooltip.silveroremod.deals_damage_to_undead": "§7Deals damage to undead."
 }
